--- a/internal/web/template/index.html
+++ b/internal/web/template/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    {{template "_header.html" .}}
     <div class="container mt-5">
         <header class="mb-4">
             <h1>{{ t .Context "all_posts" }}</h1>
