--- a/internal/web/template/post.html
+++ b/internal/web/template/post.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    {{template "_header.html" .}}
     <div class="container mt-5">
         <article>
             <h1>{{ .Title }}</h1>
