--- a/internal/web/template/index.html
+++ b/internal/web/template/index.html
@@ -2,27 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ t .Context "go_blog" }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="/static/css/styles.css" rel="stylesheet" />
 </head>
+
+
 <body>
-    {{template "_header.html" .}}
-    <div class="container mt-5">
-        <header class="mb-4">
-            <h1>{{ t .Context "all_posts" }}</h1>
-        </header>
-        <main>
-            <div class="list-group">
+   {{template "_header.html" .}}
+    <!-- Main Content-->
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
                 {{range .Posts}}
-                <a href="/posts/{{.ID}}" class="list-group-item list-group-item-action">
-                    <h5 class="mb-1">{{.Title}}</h5>
-                </a>
+                <!-- Post preview-->
+                <div class="post-preview">
+                    <a href="/posts/{{.ID}}">
+                        <h2 class="post-title">{{.Title}}</h2>
+                        <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
+                    </a>
+                    <p class="post-meta">
+                        Posted on {{.CreatedAt.Format "January 2, 2006"}}
+                    </p>
+                </div>
+                <!-- Divider-->
+                <hr class="my-4" />
                 {{else}}
                 <p class="text-muted">{{ t .Context "no_posts_found" }}</p>
                 {{end}}
             </div>
-        </main>
+        </div>
     </div>
+    {{template "_footer.html" .}}
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
