remove divider from last item

--- a/internal/web/template/index.html
+++ b/internal/web/template/index.html
@@ -24,7 +24,11 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                {{range .Posts}}
+                {{range $i, $e := .Posts}}
+                {{if $i}}
+                <!-- Divider-->
+                <hr class="my-4" />
+                {{end}}
                 <!-- Post preview-->
                 <div class="post-preview">
                     <a href="/posts/{{.ID}}">
@@ -35,8 +39,6 @@
                         Posted on {{.CreatedAt.Format "January 2, 2006"}}
                     </p>
                 </div>
-                <!-- Divider-->
-                <hr class="my-4" />
                 {{else}}
                 <p class="text-muted">{{ t .Context "no_posts_found" }}</p>
                 {{end}}
